# src/models/controlStatus.model.ts
@@ -1,0 +1,14 @@
+export interface ControlStatus {
+  controlId: string;
+  statusId: string;
+}
+
+export interface CreateControlStatusDTO {
+  controlId: string;
+  statusId: string;
+}
+
+export interface UpdateControlStatusDTO {
+  controlId: string;
+  statusId: string;
+}
